updated code for thge logic